--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-icons": "^5.5.0",
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
     "postcss": "^8",
